<resources>
    <string name="app_name">淮工兼职</string>
    <!--这里是我的 里边的字符串数据-->
    <string name="dynamic">动态</string>
    <string name="fans">粉丝</string>
    <string name="week_visitor">7天访客</string>
    <string name="collect">收藏</string>
    <string name="history">历史</string>
    <string name="night">关注</string>
    <string name="message_inform">消息通知</string>
    <string name="mall">清除缓存</string>
    <string name="mall_bonus">缓存内容</string>
    <string name="JD">校园信息</string>
    <string name="JD_bonus">校园新资讯</string>
    <string name="provide_news">我要爆料</string>
    <string name="feed_back">用户反馈</string>
    <string name="settings">系统设置</string>
    <!--登录界面和注册界面字符串-->
    <string name="action_settings">Settings</string>
    <string name="id">请输入手机号</string>
    <string name="login">登录</string>
    <string name="password">请输入6~20位的密码</string>
    <string name="misspassword">无法登录？</string>
    <string name="newuser">新用户</string>
    <string name="back">返回</string>
    <string name="register">注册</string>
    <string name="auth_code">验证码</string>
    <string name="check">换一张</string>
    <string name="isture">确认</string>
    <string name="findpassword">找回密码</string>
    <string name="truepassword">确认您的密码</string>
    <string name="id_true">格式错误</string>
    <string name="pstrue">密码不一致</string>
    <string name="autetrue">验证码错误</string>
    <string name="changepw">修改密码</string>
    <string name="true_change">确认修改</string>
    <string name="newpassword">请输入6~20位的新密码</string>
    <string name="oldpasswors">请输入旧密码</string>
    <string name="idh">用户不存在</string>
    <string name="wrongpw">密码输入错误</string>
    <!--快递单扫描-->
    <string name="title_activity_choose_com">选择快递公司</string>
    <string name="title_activity_search">查件</string>
    <string name="title_activity_deliver">寄件</string>
    <string name="title_activity_result">物流详情</string>
    <string name="title_activity_history">历史记录</string>
    <string name="title_activity_qrcode">生成二维码</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="more">更多</string>
    <string name="tips">温馨提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="loading">请稍候…</string>
    <string name="no_history">暂时没有记录</string>
    <string name="post_id">运单号码</string>
    <string name="input_post_id">请输入或扫描运单号</string>
    <string name="uncheck">在途中</string>
    <string name="ischeck">已签收</string>
    <string name="click2exit">再按一次退出小马快递</string>
    <string name="sure_delete_history">您要删除该条记录吗？</string>
    <string name="qrcode_input">请输入文本</string>
    <string name="qrcode_save_tips">是否保存二维码？</string>
    <string name="qrcode_file_name">QRCode_%s.jpg</string>
    <string name="qrcode_save_success">二维码已保存至/SDCard/Pictures/%s</string>
    <string name="qrcode_no_sdcard">保存失败，SD卡不可用</string>
    <string name="qrcode_save_failure">保存失败</string>
    <string name="share_content">我正在使用@小马快递，查询并跟踪快递，快递信息及时掌握！推荐你也试试：http://fir.im/ponyexpress</string>
    <string name="analyze_fail">抱歉，未在图中发现条码！</string>
    <string name="remark">运单备注</string>
    <string name="about_project_url">https://github.com/wangchenyan/PonyExpress</string>
    <string name="about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="about_github">https://github.com/wangchenyan</string>
    <!--引导界面-->
    <string name="main_button">立即使用</string>
    <!--新的登录界面切换使用-->
    <string name="popular">招聘用户</string>
    <string name="home">求职用户</string>
    <string name="account">Account</string>
    <string name="page">Page %1$d</string>
    <!---->
    <string name="employee">Employee</string>
    <string name="employer">Employer</string>

    <string-array name="paytype">
        <item>元/天</item>
        <item>元/时</item>
        <item>元/月</item>
        <item>元/次</item>
    </string-array>

    <string-array name="payway">
        <item>完工结算</item>
        <item>当天结算</item>
        <item>周末结算</item>
        <item>月末结算</item>
    </string-array>

    <string-array name="gender">
        <item>不限</item>
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="jobtype">
        <item>家教老师</item>
        <item>餐饮服务</item>
        <item>快递服务</item>
        <item>校园代理</item>
        <item>宣传传单</item>
        <item>校园兼职</item>
        <item>企业实习</item>
        <item>其他兼职</item>
    </string-array>
    <!--提示框-->
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="title_activity_quserdetail">QuserdetailActivity</string>
</resources>
