<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <com.hhit.edu.uikit.HeaderZoomLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--头部背景-->
            <ImageView
                android:id="@+id/iv_bg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/night1" />
            <!--头部用户信息-->
            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_count"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <com.hhit.edu.view.CircleImageView
                    android:id="@+id/circle_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/my_avatar" />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="ChayChan"
                    android:textColor="@color/white"
                    android:textSize="16.0sp" />
                <ImageView
                    android:id="@+id/edit_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@mipmap/right_arrow" />
            </LinearLayout>
            <!--头部动态、粉丝、7天访客-->
            <LinearLayout
                android:id="@+id/ll_count"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_bg"
                android:layout_marginBottom="23.0dip"
                android:layout_marginTop="18.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16.0sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/dynamic"
                        android:textColor="@color/white"
                        android:textSize="12.0sp" />
                </LinearLayout>
                <View
                    android:layout_width="0.5dip"
                    android:layout_height="38.0dip"
                    android:background="@color/color_1affffff" />
                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16.0sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/fans"
                        android:textColor="@color/white"
                        android:textSize="12.0sp" />
                </LinearLayout>
                <View
                    android:layout_width="0.5dip"
                    android:layout_height="38.0dip"
                    android:background="@color/color_1affffff" />
                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16.0sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:alpha="0.5"
                        android:text="@string/week_visitor"
                        android:textColor="@color/white"
                        android:textSize="12.0sp" />
                </LinearLayout>
            </LinearLayout>
            <!--内容-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_count"
                android:orientation="vertical">
                <!--收藏、历史、夜间-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/my_collect"
                        android:gravity="center"
                        android:text="@string/collect"
                        android:textColor="@color/color_222222"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/my_history"
                        android:gravity="center"
                        android:text="@string/history"
                        android:textColor="@color/color_222222"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@mipmap/night_mode"
                        android:gravity="center"
                        android:text="@string/night"
                        android:textColor="@color/color_222222"
                        android:textSize="12sp" />
                </LinearLayout>
                <View style="@style/MineFunctionDivider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F3F5F4" />
                <View style="@style/MineFunctionDivider" />
                <!--消息通知-->
                <RelativeLayout
                    style="@style/MineFunctionRl"
                    android:id="@+id/rl_mypost">
                    <TextView
                        style="@style/MineFunctionTvLeft"
                        android:id="@+id/txt_mypost"
                        android:text="我的发布"
                        android:textColor="@color/color_222222" />
                    <ImageView
                        style="@style/MineFunctionArrow"
                        android:background="@mipmap/setting_arrow" />
                </RelativeLayout>
                <View style="@style/MineFunctionDivider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F3F5F4" />
                <View style="@style/MineFunctionDivider" />
                <RelativeLayout style="@style/MineFunctionRl">
                    <TextView
                        style="@style/MineFunctionTvLeft"
                        android:text="我的兼职报名单"
                        android:textColor="@color/color_222222" />
                    <ImageView
                        android:id="@+id/iv_mall_arrow"
                        style="@style/MineFunctionArrow"
                        android:background="@mipmap/setting_arrow" />
                </RelativeLayout>
                <View
                    style="@style/MineFunctionDivider"
                    android:layout_marginLeft="15dp" />
                <View style="@style/MineFunctionDivider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F3F5F4" />
                <View style="@style/MineFunctionDivider" />
                <View
                    style="@style/MineFunctionDivider"
                    android:layout_marginLeft="15dp" />
                <!--用户反馈-->
                <RelativeLayout
                    android:id="@+id/mycollection"
                    style="@style/MineFunctionRl">
                    <TextView
                        style="@style/MineFunctionTvLeft"
                        android:text="其他内容"
                        android:textColor="@color/color_222222" />
                    <ImageView
                        style="@style/MineFunctionArrow"
                        android:background="@mipmap/setting_arrow" />
                </RelativeLayout>

                <View
                    style="@style/MineFunctionDivider"
                    android:layout_marginLeft="15dp" />

                <!--系统设置-->
                <RelativeLayout
                    android:id="@+id/exitlogin"
                    style="@style/MineFunctionRl">
                    <TextView
                        style="@style/MineFunctionTvLeft"
                        android:text="退出当前登录"
                        android:textColor="@color/color_222222" />
                    <ImageView
                        style="@style/MineFunctionArrow"
                        android:background="@mipmap/setting_arrow" />
                </RelativeLayout>

                <View style="@style/MineFunctionDivider" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/color_F3F5F4" />

            </LinearLayout>

        </RelativeLayout>

    </com.hhit.edu.uikit.HeaderZoomLayout>

</LinearLayout>
